[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Objects/Van/van.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Van/Van.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 496 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 288, 576 )

[node name="Van" type="StaticBody2D"]
collision_layer = 4096
collision_mask = 0
script = ExtResource( 2 )

[node name="SecureZoneVisible" type="ColorRect" parent="."]
visible = false
modulate = Color( 0.292969, 0.650482, 0.9375, 0.501961 )
margin_left = -256.0
margin_top = -640.0
margin_right = 320.0
margin_bottom = 512.0
color = Color( 0.45098, 0.858824, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 40, 24 )
shape = SubResource( 1 )

[node name="Secure_zone" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Secure_zone"]
position = Vector2( 32, -64 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Secure_zone"]
rotation = -3.14159
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 32, -59.9999 )
scale = Vector2( 28.8, 58 )

[connection signal="area_entered" from="Secure_zone" to="." method="_on_Secure_zone_area_entered"]
[connection signal="body_entered" from="Secure_zone" to="." method="_on_Secure_zone_body_entered"]
[connection signal="body_exited" from="Secure_zone" to="." method="_on_Secure_zone_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
